[gd_scene load_steps=13 format=2]

[ext_resource path="res://Snowman.gd" type="Script" id=1]
[ext_resource path="res://Assets/snowman1.png" type="Texture" id=2]
[ext_resource path="res://Assets/snowman2.png" type="Texture" id=3]
[ext_resource path="res://Assets/snowman3.png" type="Texture" id=4]
[ext_resource path="res://Assets/snowman4.png" type="Texture" id=5]
[ext_resource path="res://Assets/snowman5.png" type="Texture" id=6]
[ext_resource path="res://Assets/snowman6.png" type="Texture" id=7]
[ext_resource path="res://Assets/snowman_die1.png" type="Texture" id=8]
[ext_resource path="res://Assets/snowman_die2.png" type="Texture" id=9]
[ext_resource path="res://Assets/snowman_die3.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 50 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "attack",
"speed": 50.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "damage",
"speed": 15.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[node name="Snowman" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "die"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 50, 12 )

[node name="PlayerPositionTimer" type="Timer" parent="."]
autostart = true

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PlayerPositionTimer" to="." method="_on_PlayerPositionTimer_timeout"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
